--- a/src/Controls.less
+++ b/src/Controls.less
@@ -4,4 +4,9 @@
         color: #ffffff;
         text-align: center;
     }
+    .Gates {
+        justify-items: center;
+        display: grid;
+        grid-template-columns: 1fr  1fr;
+    }
 }   
